# imgui-cubic-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera.cpp  camera.h  cube.cpp  cube.h  main.cpp  shader.cpp  shader.h  shader_config.ini  ui.cpp  ui.h
shaders/fragment/: normal.frag  pulse.frag  rainbow.frag
shaders/vertex/: breathing.vert  normal.vert  wave.vert
